# snt_nfops-planner

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README_PHASE10.md  README_PHASE11.md  README_PHASE12.md  README_PHASE4.md  README_PHASE5.md  README_PHASE6.md  README_PHASE7.md  README_PHASE8.md  cleanup-backup-20251025-123413.tgz  create_all_files.bat  pyproject.toml  pyproject.toml.bak.2025-10-24-214756  pyproject.toml.bak.2025-10-24-214948  pyproject.toml.broken.2025-10-24-213255  pyproject.toml.fix_backup  pyproject.toml.fixbak.2025-10-24-215259  pyproject.toml.fixbak.2025-10-24-215433  pyproject.toml.pre-fix.20251025121149  pytest.ini  requirements-dev.txt  requirements-phase14.txt  requirements.txt  setup_phase2.bat
.backup_readme/: README_PHASE10.md  README_PHASE12.md  README_PHASE3.md  README_PHASE8.md
.history/: CHANGELOG_20251024092029.md  CHANGELOG_20251024092323.md
config/: phase2_dq.yaml
configs/: features.yml
dags/: retrain_dag.py
docker/: docker-compose.yml
docs/: ChatGPT-運用憲法遵守.md  MIGRATION-phase2-to-nfops_phase2.md  README_PHASE12.md  phase2_dq.md
examples/: invalid_values.csv  matrix_spec.yaml  run_dry_run.bat
flows/: retrain_flow.py
gx/: README.md
matrix/: gatekeeper.yaml  production_retrain.yaml
monitor/: metrics.txt
nfops_eval/: __init__.py  __version__.py  eval_runner.py  exceptions.py  models.py
nfops_features/: __init__.py  __version__.py  exceptions.py  feat_runner.py  models.py
nfops_inference/: __init__.py  __version__.py  exceptions.py  models.py
(+837 files in other folders)
