[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64", "wheel" ]

[project]
name = "nfops-planner"
version = "0.0.0"
description = "NFOPS planner (temporary minimal metadata)"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE", "LICENSE.txt" ]
authors = [ { name = "NFOPS Team" } ]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [  ]

optional-dependencies.dev = [ "loguru>=0.7", "psutil>=5", "pytest>=8", "pyyaml>=6" ]
optional-dependencies.eval = [ "pandas>=2" ]
optional-dependencies.features = [ "pandas>=2" ]
optional-dependencies.inference = [ "loguru>=0.7" ]
optional-dependencies.monitor = [ "loguru>=0.7", "psutil>=5" ]
optional-dependencies.observability = [ "loguru>=0.7", "psutil>=5" ]
optional-dependencies.predict = [ "pandas>=2" ]
optional-dependencies.train = [ "lightning>=2" ]                                     # torch は CUDA/CPU に合わせ個別インストール推奨

[tool.setuptools.packages.find]
# パッケージは nfops_* 配下を拾う
include = [ "nfops_*" ]

[tool.setuptools.package-data]
nfops_promotion = [ "templates/*.j2" ]

[tool.pytest.ini_options]
# 余計なプラグインを読まないよう、環境変数と合わせて静かに動かす
addopts = "-q"
testpaths = [ "tests" ]
